--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,6 +38,10 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
+db.mongo.host="localhost:27017"
+db.mongo.dbname="mydb"
+
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
@@ -56,4 +60,11 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+# Twitter Client
+# ~~~~~
+twitter.consumerKey="Rw3oxWWGzKXlzqYdJFI2GQ"
+twitter.consumerSecret="d1MF7QuTj0h4tUOxCvE2tcKxdtn3sSmbt1gml7rSU"
+twitter.token="386499416-uU9KitdlwgdG3VEb2gNigmc0BUMoyQ6xr4AosxU5"
+twitter.tokenSecret="JwuqI8suFruw4kO2uFyueQeAIJFYFlxbxTGQelPBGguUr"
 
