--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,8 +38,8 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
-db.mongo.host="localhost:27017"
-db.mongo.dbname="mydb"
+mongo.url="localhost:27017"
+mongo.dbname="mydb"
 
 
 # Evolutions
