hide scret in conf file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,7 +64,7 @@ logger.application=DEBUG
 # Twitter Client
 # ~~~~~
 twitter.consumerKey="Rw3oxWWGzKXlzqYdJFI2GQ"
-twitter.consumerSecret="d1MF7QuTj0h4tUOxCvE2tcKxdtn3sSmbt1gml7rSU"
+twitter.consumerSecret="secret"
 twitter.token="386499416-uU9KitdlwgdG3VEb2gNigmc0BUMoyQ6xr4AosxU5"
-twitter.tokenSecret="JwuqI8suFruw4kO2uFyueQeAIJFYFlxbxTGQelPBGguUr"
+twitter.tokenSecret="secret"
 
