--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,8 +38,7 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
-mongo.url="localhost:27017"
-mongo.dbname="mydb"
+mongodb.uri ="mongodb://localhost:27017/mydb"
 
 
 # Evolutions
