--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,7 +62,7 @@ logger.application=DEBUG
 
 # Twitter Client
 # ~~~~~
-twitter.consumerKey="Rw3oxWWGzKXlzqYdJFI2GQ"
+twitter.consumerKey="fK396wMWQuA4Mw8WKmVquq16z"
 twitter.consumerSecret="secret"
 twitter.token="386499416-uU9KitdlwgdG3VEb2gNigmc0BUMoyQ6xr4AosxU5"
 twitter.tokenSecret="secret"
