handle congestion with akka BoundedQueueSemantics

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,3 +67,16 @@ twitter.consumerSecret="secret"
 twitter.token="386499416-uU9KitdlwgdG3VEb2gNigmc0BUMoyQ6xr4AosxU5"
 twitter.tokenSecret="secret"
 
+# Akka queues
+# ~~~~~
+
+bounded-mailbox {
+  mailbox-type = "akka.dispatch.BoundedMailbox"
+  mailbox-capacity = 10
+  mailbox-push-timeout-time = 10s
+}
+
+akka.actor.mailbox.requirements {
+  "akka.dispatch.BoundedMessageQueueSemantics" = bounded-mailbox
+}
+
