dockerise the project

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-logs
-.DS_Store
-project/project
-project/target
-target
-tmp
-.history
-dist
-/.idea
-/*.iml
-/out
-/.idea_modules
-/.classpath
-/.project
-/RUNNING_PID
-/.settings
-public/test.html
+docker-compose.dev.yml
