--- a/app/conf/application.conf
+++ b/app/conf/application.conf
@@ -38,8 +38,7 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
-mongodb.uri ="mongodb://localhost:27017/mydb"
-
+mongodb.uri ="mongodb://mongo:27017/mydb"
 
 # Evolutions
 # ~~~~~
@@ -63,9 +62,9 @@ logger.application=DEBUG
 # Twitter Client
 # ~~~~~
 twitter.consumerKey="2EIGqhtnrlBDjgACraCns3ROK"
-twitter.consumerSecret="secret"
+twitter.consumerSecret=${?TWITTER_CONSUMER_SECRET}
 twitter.token="386499416-uU9KitdlwgdG3VEb2gNigmc0BUMoyQ6xr4AosxU5"
-twitter.tokenSecret="secret"
+twitter.tokenSecret=${?TWITTER_TOKEN_SECRET}
 
 # Akka queues
 # ~~~~~
